 NEWS/ChangeLog for rJava
--------------------------

0.5-1	(under development)

    o	fix Java environment checks

    o	add support for r.arch system property which allows multi-arch
	support on platforms that don't have fat binaries (e.g. Linux)

0.5-0	2007-08-22
    o	**API CHANGE**
	The order of arguments of .jfield has been changed to match
	the order used in .jcall and the return value is as expected
	and doesn't need .jsimplify anymore.

    o	The implementation of .jfield no longer uses reflection
	it supports static fileds and .field<-() was added.

    o	Consolidate interface code for static/non-static calls.
	It is now possible to call a static method using a non-static
	object.

    o	Add .jpackage function for initialization of Java packages.
	See documentation for details, packages should no longer
	use .jinit in their initialization code.

    o	Add preliminary JRI support from R (see .jengine)

    o	Prepare hooks for de-serialization

    o	Add support for short Java type

    o	Add support for convertors

    o	Fix R-devel compatibility issues

    o	Fix a memory leak in string array handling

    o	Use Java settings from R for compilation

    o	Add a custom class loader

    o	Fix a bug in .jcastToArray that produced invalid signatures

    o	Added support for [Z in .jevalArray

    o	Fix a bug in .jarray missing [ prefix for native type arrays

0.4 branch has been branched off the trunk, see 0.4-branch for NEWS

0.4-13	2007-01-14
    o	Fix Java-side memory leaks (temporary parameters to methods
	were not propery released, thanks to Erik van Barneveld for
	supplying a reproducible example).

    o	Fix a bug that caused only the first VM parameter to be passed
	on during initialization (thanks to Bernard Rosman for
	reporting).

    o	.jmkref now accepts plain class names (with .)

    o	Fix bug in .jarray (and underlying RcreateArray) that was
	returning wrong class name if the contents class was an array.
