@@ -22,8 +22,8 @@ $(warning JAVA_HOME is $(JAVA_HOME))
 # normally you don't have to touch this unless you want to add
 # debugging flags like -DRJ_DEBUG or -DRJ_PROFILE to PKG_CFLAGS
 JAVA_INCLUDES=$(JAVA_HOME)/include $(JAVA_HOME)/include/win32
-PKG_CFLAGS+= -D_R_ -DWin32 -I$(RHOME)/src/include $(JAVA_INCLUDES:%=-I%)
+PKG_CPPFLAGS+= -D_R_ -DWin32 -I$(RHOME)/src/include $(JAVA_INCLUDES:%=-I%)
 PKG_LIBS+= -ljvm.dll -Ljvm-w32
 
-$(warning PKG_CFLAGS are $(PKG_CFLAGS))
+$(warning PKG_CPPFLAGS are $(PKG_CPPFLAGS))
 
